--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,18 +7,41 @@ jobs:
     vmImage: 'ubuntu-16.04'
 
   steps:
-  - script: cd examples && make
+  - script: cd examples
+
+  - task: CMake@1
+    inputs:
+      workingDirectory: 'build'
+
+  - script: cd build && make
 
 - job: macOS
   pool:
     vmImage: 'macOS-10.14'
 
   steps:
-  - script: cd examples && gcc -o examples *.c -DUNIX -Wall -g
+  - script: cd examples
+
+  - task: CMake@1
+    inputs:
+      workingDirectory: 'build'
+
+  - script: cd build && make
 
 - job: Windows
   pool:
     vmImage: 'windows-2019'
 
   steps:
-  - script: cd examples && gcc -o examples.exe *.c -DWINDOWS -Wall -g 
+  - script: cd examples
+
+  - task: CMake@1
+    inputs:
+      workingDirectory: 'build'
+      cmakeArgs: '-A x64 -DCMAKE_HOST_SYSTEM_NAME=Windows'
+
+  - task: MSBuild@1
+    inputs:
+      solution: 'build/*.sln'
+      maximumCpuCount: true
+      platform: 'x64'
