Extend memory.h functionalities
Added a few more function to memory.h, some are yet to be made

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,12 +3,14 @@ project(example VERSION 0.1.0.0 LANGUAGES C)
 
 SET(X64_FILES ON CACHE BOOL "Build with 64-bit files support")
 
+add_executable(files files.c)
+add_executable(memory memory.c)
+
 if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
- add_definitions(-DWINDOWS)
+  target_link_libraries(memory Kernel32.lib)
+  target_link_libraries(memory Ws2_32.lib)
 endif()
 
 if(X64_FILES)
- add_definitions(-DX64_FILES)
+  add_definitions(-DX64_FILES)
 endif()
-
-add_executable(files files.c)
