Add lists functions and example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(libpampa VERSION 0.1.0.0 LANGUAGES C)
 include_directories("include")
 
 add_subdirectory("examples")
+add_subdirectory("tests")
