Add example using lists with arrays

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
- add_subdirectory("patching_memory")
- add_subdirectory("using_files")
- add_subdirectory("using_lists")
+add_subdirectory("array_lists")
+add_subdirectory("patching_memory")
+add_subdirectory("using_files")
+add_subdirectory("using_lists")
