--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory("array_lists")
 add_subdirectory("patching_memory")
+add_subdirectory("string_lists")
 add_subdirectory("using_files")
 add_subdirectory("using_lists")
