--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project(libpampa VERSION 0.1.0.0 LANGUAGES C)
 
-include_directories("include")
+include_directories("include" "lib")
 
 add_subdirectory("examples")
 add_subdirectory("tests")
