--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory("patching_memory")
 add_subdirectory("string_lists")
 add_subdirectory("using_files")
 add_subdirectory("using_lists")
+add_subdirectory("using_images")
